# internal/server/server.go
@@ -30,9 +30,10 @@ func New() *gin.Engine {
 		apiGroup.POST("/game/finalize", api.FinalizeHandler)
 		apiGroup.POST("/game/abandon", api.AbandonHandler)
 		apiGroup.POST("/game/chat", api.ChatHandler)
-		apiGroup.GET("/game/logs", api.LogsHandler)
-		apiGroup.GET("/game/stream", api.StreamHandler)
-		apiGroup.GET("/game/state", api.GameStateHandler)
+		apiGroup.GET("/game/:gameId/logs", api.LogsHandler)
+		apiGroup.GET("/game/:gameId/stream/:userId", api.StreamHandler)
+		apiGroup.GET("/game/:gameId/state/:userId", api.GameStateHandler)
+		apiGroup.GET("/admin/game/:gameId", api.AdminStateHandler)
 		apiGroup.POST("/user/rename", api.RenameHandler)
 		apiGroup.GET("/version", api.VersionHandler)
 		apiGroup.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
